welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: not found: value max
    max=a 
    ^max1020:6: error: not found: value max
    max=b
    ^max1020:5: error: type mismatch;
 found   : Unit
 required: Int
  if (a<b){
  ^